# juben

./: .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt
.config/: visual_styles.json
juben/: __init__.py  bootstrapper.py  cli.py  committer.py  constraint_injector.py  constraints.py  curator.py  guardian.py  research.py  rewriter.py  timeline_lock.py
juben/episode/: __init__.py  adapter.py  parser.py  rhythm.py  schema.py  scribe_prompt.py  shot_prompt.py
juben/extract/: __init__.py
juben/generate/: __init__.py  scribe.py
juben/genre_templates/: __init__.py  rebirth_revenge.py  registry.py  universal.py
juben/guardian/: __init__.py  location_tracker.py
juben/mixins/: __init__.py  merge_engine.py
juben/skeleton/: 100chap-epic.json  20chap-fast.json  50chap-standard.json
juben/state/: __init__.py  manager.py  schema.py
juben/validate/: __init__.py  anti_ai.py  anti_cliche.py  cliffhanger.py  dead_frame.py  dynamic_blacklist.py  five_dimension.py  info_asymmetry.py  structure_diversity.py
projects/嫡女有毒/: bootstrap_prompt.md  bootstrap_response.json  characters.json  plot_threads.json  story_meta.json  world_rules.json
projects/我在大厂修仙/: bootstrap_prompt.md  bootstrap_response.json  characters.json  concept_mapping.json  cost_history.json  curator_state.json  dynamic_blacklist.txt  state.json  (+5 more)
references/: camera-language.md  hook-design.md
scripts/: gen_demo.py
templates/: character-template.json  plot-threads-template.json  relationships-template.json  story-meta-template.json  timeline-template.json  world-rules-template.json
(+235 files in other folders)
